# PetClinicRUST

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
assets/: pet.json  veterinarian.json
database/: create.sql  create_postgres.sql  pet_clinic.mwb
deploy/: petclinic.yaml
deploy/k8s/: db-deployment.yml  db-service.yml  kustomization.yaml  petclinic-deployment.yml  petclinic-service.yml
src/: main.rs  models.rs  schema.rs
src/domain/: mod.rs  treatment.rs  veterinarian.rs
src/handlers/: mod.rs  pet.rs  pet_owner.rs  veterinarian.rs
src/repository/: mod.rs  repository.rs  veterinarian.rs
src/utils/: domainErrors.rs  mod.rs
