[package]
name = "rust-pet-clinic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = [  "runtime-async-std-native-tls", "postgres", "chrono" ] }
chrono = { version = "0.4.31", features = ["serde"] }
actix-web = "4.4.0"
actix-cors = "0.6.4"
thiserror = "1.0.52"
async-trait = "0.1.75"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
actix-web-prometheus = "0.1.2"
